<resources>

    <!-- Genéricos App -->
    <string name="app_name">Rol &amp; Play</string>
    <string name="entrar">Entrar</string>
    <string name="cargando">Cargando…</string>
    <string name="navigation_drawer_open">Abrir la navegación lateral</string>
    <string name="navigation_drawer_close">Cerrar la navegación lateral</string>
    <string name="pulsaApartadoVerDetalle">Pulsa en un apartado para ver en detalle</string>
    <string name="anadir">Añadir</string>
    <string name="modificar">Modificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="cerrar">Cerrar</string>

    <!-- Control de cuentas -->
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetirContrasena">Repetir Contraseña</string>
    <string name="hasOlvidadoContrasena">¿Has olvidado la contraseña?</string>
    <string name="noTienesCuentaRegistrate">¿No tienes cuenta de Rol &amp; Play? Regístrate.</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperarPassword">Recuperar password</string>
    <string name="recuperar">Recuperar</string>

    <!-- Menú lateral -->
    <string name="ficha">Ficha</string>
    <string name="datosPersonaje">Datos del personaje</string>
    <string name="puntosHabilidad">Puntos de habilidad</string>
    <string name="habilidadesBonificadores">Habilidades y bonificadores</string>
    <string name="combate">Combate</string>
    <string name="equipo">Equipo</string>
    <string name="ataquesConjuros">Ataques y conjuros</string>
    <string name="personalidad">Personalidad</string>
    <string name="rasgosAtributos">Rasgos y atributos</string>
    <string name="competenciasIdiomas">Competencias e idiomas</string>
    <string name="lanzarDados">Lanzar dados</string>
    <string name="otros">Otros</string>
    <string name="cuenta">Cuenta</string>
    <string name="salirPersonaje">Salir del personaje</string>
    <string name="logout">Cerrar sesión</string>
    <string name="politicasCondiciones">Políticas y condiciones</string>
    <string name="configuracion">Configuración</string>
    <string name="estasSegurxQuieresCerrarSesion">¿Estás segur@ de que quieres cerrar sesión?</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="reproductorMusica">Reproductor de música</string>

    <!-- Cabecera -->
    <string name="nombre">Nombre</string>
    <string name="clase">Clase</string>
    <string name="trasfondo">Trasfondo</string>
    <string name="alineamiento">Alineamiento</string>
    <string name="raza">Raza</string>
    <string name="nivelPersonaje">Nivel %1$s</string>
    <string name="experiencia">%1$s / %2$s exp</string>
    <string name="aumentarExperiencia">Aumentar experiencia</string>

    <!-- Puntos de habilidad -->
    <string name="fuerza">Fuerza</string>
    <string name="destreza">Destreza</string>
    <string name="constitucion">Constitución</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="sabiduria">Sabiduría</string>
    <string name="carisma">Carisma</string>

    <!-- Habilidades y Bonificadores -->
    <string name="inspiracion">Inspiración</string>
    <string name="bonificadorCompetencia">Bonificador por \n competencia</string>
    <string name="tiradasSalvacion">Tiradas de salvación</string>
    <string name="habilidades">Habilidades</string>
    <string name="acrobacias">Acrobacias</string>
    <string name="atletismo">Atletismo</string>
    <string name="conocimientoArcano">Conocimiento Arcano</string>
    <string name="engaño">Engaño</string>
    <string name="historia">Historia</string>
    <string name="interpretacion">Interpretación</string>
    <string name="intimidacion">Intimidación</string>
    <string name="investigacion">Investigación</string>
    <string name="juegoManos">Juego de manos</string>
    <string name="medicina">Medicina</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="percepcion">Percepción</string>
    <string name="perspicacia">Perspicacia</string>
    <string name="persuasion">Persuasión</string>
    <string name="religion">Religión</string>
    <string name="sigilo">Sigilo</string>
    <string name="supervivencia">Supervivencia</string>
    <string name="tratoAnimales">Trato con animales</string>
    <string name="sabiduriaPercepcionPasiva">Sabiduría \n (percepción) pasiva</string>
    <string name="simboloSumar" translatable="false">+</string>
    <string name="simboloRestar" translatable="false">-</string>
    <string name="monturasVehiculos">Monturas y Vehículos</string>
    <string name="miscelaneo">Misceláneo</string>
    <string name="mercancias">Mercancías</string>
    <string name="herramientas">Herramientas</string>
    <string name="armasCuerpoACuerpoSimples">Armas cuerpo a cuerpo simples</string>
    <string name="armasCuerpoACuerpoMarciales">Armas cuerpo a cuerpo marciales</string>
    <string name="armasADistanciaSimples">Armas a distancia simples</string>
    <string name="armasADistanciaMarciales">Armas a distancia marciales</string>
    <string name="armadurasPesadas">Armaduras Pesadas</string>
    <string name="armadurasMedias">Armaduras Medias</string>
    <string name="armadurasLigeras">Armaduras Ligeras</string>
    <string name="armas">Armas</string>
    <string name="armaduras">Armaduras</string>


    <!-- Equipo -->
    <string name="objeto">Objeto</string>
    <string name="costeEquipo">Coste: %1$s</string>
    <string name="pesoEquipo">Peso: %1$slb</string>
    <string name="piezasCobre">Piezas de cobre</string>
    <string name="piezasPlata">Piezas de plata</string>
    <string name="piezasEsmeralda">Piezas de esmeralda</string>
    <string name="piezasOro">Piezas de oro</string>
    <string name="piezasPlatino">Piezas de platino</string>
    <string name="piezasCobreConSalto">Piezas \n de cobre</string>
    <string name="piezasPlataConSalto">Piezas \n de plata</string>
    <string name="piezasOroConSalto">Piezas \n de oro</string>
    <string name="piezasEsmeraldaConSalto">Piezas \n de esmeralda</string>
    <string name="piezasPlatinoConSalto">Piezas \n de platino</string>
    <string name="anadirObjeto">Añadir objeto</string>
    <string name="modificarMonedas">Modificar monedas</string>

    <!-- Combate -->
    <string name="claseArmadura">Clase \n de armadura</string>
    <string name="iniciativa">Iniciativa</string>
    <string name="velocidad">Velocidad</string>
    <string name="velocidadDosPuntos">Velocidad: %1$s</string>
    <string name="puntosGolpeActuales">Puntos de golpe actuales:</string>
    <string name="puntosGolpeTemporales">Puntos de golpe temporales:</string>
    <string name="total">Total:</string>
    <string name="dadosGolpe">Dados de golpe:</string>
    <string name="exitos">Éxitos</string>
    <string name="fallos">Fallos</string>
    <string name="salvacionesContraMuerte">Salvaciones contra muerte</string>
    <string name="barraDiagonal" translatable="false">/</string>

    <!-- Competencias e idiomas -->
    <string name="idiomas">Idiomas:</string>
    <string name="armadura">Armadura:</string>
    <string name="armasDosPuntos">Armas:</string>
    <string name="herramientasDosPuntos">Herramientas:</string>
    <string name="especialidad">Especialidad:</string>
    <string name="rangoMilitar">Rango militar:</string>
    <string name="otras">Otras:</string>
    <string name="modificarCompetenciasIdiomas">Modificar Competencias / Idiomas</string>

    <!-- Personalidad -->
    <string name="rasgosPersonalidad">Rasgos de personalidad</string>
    <string name="ideales">Ideales</string>
    <string name="vinculos">Vínculos</string>
    <string name="defectos">Defectos</string>
    <string name="editarTexto">Editar texto</string>

    <!-- Rasgos y atributos -->
    <string name="anadirRasgoAtributo">Añadir rasgo / atributo</string>

    <!-- Ataques y conjuros -->
    <string name="anadirAtaque">Añadir ataque</string>
    <string name="anadirConjuro">Añadir conjuro</string>
    <string name="ataques">Ataques</string>
    <string name="conjuros">Conjuros</string>
    <string name="danyoAtaque">Daño: %1$s</string>
    <string name="propiedadesAtaque">Propiedades: %1$s</string>

    <!-- Lanzar dados -->
    <string name="unodcuatro" translatable="false">1d4</string>
    <string name="unodseis" translatable="false">1d6</string>
    <string name="unodocho" translatable="false">1d8</string>
    <string name="unoddiez" translatable="false">1d10</string>
    <string name="unoddoce" translatable="false">1d12</string>
    <string name="unodveinte" translatable="false">1d20</string>
    <string name="unodcien" translatable="false">1d100</string>
    <string name="unodundefined" translatable="false">1d?</string>
    <string name="lanzar">¡Lanzar!</string>
    <string name="uno" translatable="false">1</string>
    <string name="cuantosDadosQuieresLanzar">¿Cuántos dados quieres lanzar?</string>
    <string name="cuantasCarasDado">¿De cuantas caras quieres que sea el dado?</string>

    <!-- Valores -->
    <string name="menoscinco" translatable="false">-5</string>
    <string name="menoscuatro" translatable="false">-4</string>
    <string name="menostres" translatable="false">-3</string>
    <string name="menosdos" translatable="false">-2</string>
    <string name="menosuno" translatable="false">-1</string>
    <string name="zero" translatable="false">0</string>
    <string name="masuno" translatable="false">+1</string>
    <string name="masdos" translatable="false">+2</string>
    <string name="mastres" translatable="false">+3</string>
    <string name="mascuatro" translatable="false">+4</string>

    <!-- Configuración -->
    <string name="ajustesGenerales">Ajustes generales</string>
    <string name="sonido">Sonido</string>
    <string name="recibirNoticiasCorreo">Quiero recibir noticias al correo</string>
    <string name="ajustesCuenta">Ajustes de cuenta</string>
    <string name="otrasEstadisticas">Otras estadísticas</string>
    <string name="dadosLanzados">Dados lanzados:</string>
    <string name="personajesCreados">Personajes creados en total:</string>
    <string name="informacion">Información</string>
    <string name="politicaDatos">Política de datos</string>
    <string name="condicionesUso">Condiciones de uso</string>
    <string name="accedeApi">Accede a la API</string>
    <string name="cambiarContrasenya"><u>Cambiar contraseña</u></string>
    <string name="eliminarCuenta"><u>Eliminar cuenta</u></string>

    <!-- Menú de personajes -->
    <string name="seleccionarPersonaje">Seleccionar personaje</string>
    <string name="crearPersonaje">Crear personaje</string>
    <string name="personaje">Personaje</string>
    <string name="codigo">Código: %1$s</string>
    <string name="dungeonsAndDragons" translatable="false">Dungeons &amp; Dragons</string>
    <string name="crear">Crear</string>
    <string name="eliminar">Eliminar</string>
    <string name="estasSegurxQuieresEliminarPersonaje">¿Estás segur@ de que quieres eliminar el personaje?</string>

    <!-- Reproductor de música -->
    <string name="cancionAmbiente">Canción Ambiente</string>
    <string name="cancionTaberna">Canción Taberna</string>
    <string name="cancionBatalla">Canción Batalla</string>
    <string name="temporizador0" translatable="false">00:00:00</string>

</resources>