<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/CabeceraActivity_layoutBase"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="30dp">

    <TextView
        android:id="@+id/CabeceraActivity_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chantelli_antiqua"
        android:gravity="center_horizontal"
        android:text="@string/datosPersonaje"
        android:textColor="@color/colorPrimary"
        android:textSize="38sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CabeceraActivity_nombrePersonaje_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CabeceraActivity_titulo"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CabeceraActivity_nombrePersonaje_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/nombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CabeceraActivity_clasePersonaje_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CabeceraActivity_nombrePersonaje_TIL"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CabeceraActivity_clasePersonaje_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/clase" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CabeceraActivity_trasfondoPersonaje_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CabeceraActivity_clasePersonaje_TIL"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CabeceraActivity_trasfondoPersonaje_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/trasfondo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CabeceraActivity_alineamientoPersonaje_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CabeceraActivity_trasfondoPersonaje_TIL"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CabeceraActivity_alineamientoPersonaje_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/alineamiento"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/CabeceraActivity_tituloRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        android:paddingTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@+id/CabeceraActivity_alineamientoPersonaje_TIL"/>

    <Spinner
        android:id="@+id/CabeceraActivity_raza_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/CabeceraActivity_tituloRaza"/>

    <TextView
        android:id="@+id/CabeceraActivity_tituloNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivelPersonaje"
        android:paddingTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_below="@+id/CabeceraActivity_raza_dropdown"/>

    <ProgressBar
        android:id="@+id/CabeceraActivity_nivel_barraProgreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CabeceraActivity_tituloNivel"
        android:progress="0"
        android:paddingTop="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progressDrawable="@layout/progressbar_naranja"/>

    <TextView
        android:id="@+id/CabeceraActivity_tituloExperiencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experiencia"
        android:paddingTop="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_below="@+id/CabeceraActivity_nivel_barraProgreso"
        android:layout_alignEnd="@id/CabeceraActivity_nivel_barraProgreso"/>


</RelativeLayout>