<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/CompetenciasIdiomas_layoutBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="30dp">

        <TextView
            android:id="@+id/CompetenciasIdiomas_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/chantelli_antiqua"
            android:gravity="center_horizontal"
            android:text="@string/competenciasIdiomas"
            android:textColor="@color/colorPrimary"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_idiomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_titulo"
            android:text="@string/idiomas"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_idiomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_titulo"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_idiomas"
            android:paddingStart="35dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_armadura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_idiomas"
            android:paddingTop="20dp"
            android:text="@string/armadura"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_armadura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_armadura"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_armadura"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_armas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_armadura"
            android:paddingTop="20dp"
            android:text="@string/armasDosPuntos"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_armas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_armas"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_armas"
            android:paddingStart="50dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_herramientas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_armas"
            android:paddingTop="20dp"
            android:text="@string/herramientasDosPuntos"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_herramientas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_herramientas"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_herramientas"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_especialidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_herramientas"
            android:paddingTop="20dp"
            android:text="@string/especialidad"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_especialidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_especialidad"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_herramientas"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_rangoMilitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_especialidad"
            android:paddingTop="20dp"
            android:text="@string/rangoMilitar"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_rangoMilitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_rangoMilitar"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_rangoMilitar"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_texto_otras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompetenciasIdiomas_valor_rangoMilitar"
            android:paddingTop="20dp"
            android:text="@string/otras"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CompetenciasIdiomas_valor_otras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/CompetenciasIdiomas_texto_otras"
            android:layout_toEndOf="@+id/CompetenciasIdiomas_texto_otras"
            android:paddingStart="55dp"
            android:paddingEnd="0dp"
            android:text=""
            android:textColor="@color/colorBlanco"
            android:textSize="20sp" />

        <Button
            android:id="@+id/CompetenciasIdiomas_modificarCompetenciasIdiomas_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CompetenciasIdiomas_valor_otras"
            android:layout_marginTop="20dp"
            android:text="@string/modificarCompetenciasIdiomas" />

    </RelativeLayout>

</ScrollView>
